<resources>
    <string name="app_name">Blue Line Solar Info</string>
    <string name="app_author_name" translatable="false">nhirokinet</string>
    <string name="app_author_description" translatable="false">https://nhiroki.net/</string>
    <string name="app_source_code_url" translatable="false">https://github.com/nhirokinet/bluelinesolarinfo</string>
    <string name="format_unit_angle_dms">&#x200e;%1$d&#x200e;°%2$02d&#x200e;\'%3$02d&#x200e;.%4$01d&#x200e;\"</string>
    <string name="format_unit_angle_dm">&#x200e;%1$d&#x200e;°%2$02d&#x200e;\'</string>
    <string name="unit_angle_dm_invalid_3digits">&#x200e;---°--\'</string>
    <string name="format_unit_angle_dm_signed">&#x200e;%1$s%2$d&#x200e;°%3$02d&#x200e;\'</string>
    <string name="unit_angle_deg">°</string>
    <string name="unit_angle_meter">m</string>
    <string name="coordinate_display_north">N</string>
    <string name="coordinate_display_south">S</string>
    <string name="coordinate_display_east">E</string>
    <string name="coordinate_display_west">W</string>
    <string name="direction_short_16_area_0">N</string>
    <string name="direction_short_16_area_1">NNE</string>
    <string name="direction_short_16_area_2">NE</string>
    <string name="direction_short_16_area_3">ENE</string>
    <string name="direction_short_16_area_4">E</string>
    <string name="direction_short_16_area_5">ESE</string>
    <string name="direction_short_16_area_6">SE</string>
    <string name="direction_short_16_area_7">SSE</string>
    <string name="direction_short_16_area_8">S</string>
    <string name="direction_short_16_area_9">SSW</string>
    <string name="direction_short_16_area_10">SW</string>
    <string name="direction_short_16_area_11">WSW</string>
    <string name="direction_short_16_area_12">W</string>
    <string name="direction_short_16_area_13">WNW</string>
    <string name="direction_short_16_area_14">NW</string>
    <string name="direction_short_16_area_15">NNW</string>
    <string name="event_name_sun_ecliptic_longitude_0_north">March equinox</string>
    <string name="event_name_sun_ecliptic_longitude_90_north">June solstice</string>
    <string name="event_name_sun_ecliptic_longitude_180_north">September equinox</string>
    <string name="event_name_sun_ecliptic_longitude_270_north">December solstice</string>
    <string name="event_name_sun_ecliptic_longitude_0_south">March equinox</string>
    <string name="event_name_sun_ecliptic_longitude_90_south">June solstice</string>
    <string name="event_name_sun_ecliptic_longitude_180_south">September equinox</string>
    <string name="event_name_sun_ecliptic_longitude_270_south">December solstice</string>
    <string name="moon_phase_0">New moon</string>
    <string name="moon_phase_90">First quarter</string>
    <string name="moon_phase_180">Full moon</string>
    <string name="moon_phase_270">Third quarter</string>
    <string name="main_activity_today_format">%1$s (today)</string>
    <string name="main_activity_current_location">Current location</string>
    <string name="main_activity_message_location_fetching">Positioning...</string>
    <string name="main_activity_message_location_fetch_error">Failed to get the current location</string>
    <string name="main_activity_message_error_permission_location_fetch">App has no permission to get the current position</string>
    <string name="main_activity_location_coordinates_format">%1$s %2$s %3$s %4$s</string>
    <string name="main_activity_location_elevation_meters">Elevation %1$.1fm</string>
    <string name="main_activity_location_unknown_line">---</string>
    <string name="main_activity_location_provider_info_format">Provider: %1$s / Accuracy: %2$1.1fm</string>
    <string name="main_activity_location_provider_info_with_elevation_format">Provider: %1$s / Accuracy: %2$1.1fm / Elevation accuracy: %3$1.1fm</string>
    <string name="main_activity_first_guide_add_region_text">No region is set yet. You can configure regions via top-right menu button.</string>
    <string name="main_activity_first_guest_add_region_now_button">Add region now</string>
    <string name="main_activity_config_location_measure_use_elevation">Consider elevation in calculation</string>
    <string name="main_activity_nolocpriv_add_location_privilege_text">This app currently does not have privilege to fetch the current location. If you want to display according to device location, please grant the privilege. You can add region from menu to use without location permission.</string>
    <string name="main_activity_nolocpriv_add_location_privilege_button">Grant location access</string>
    <string name="main_activity_solar_info_today_azimuth_str_format">Azimuth %1$s (%2$s)</string>
    <string name="main_activity_solar_info_today_culmination_direction_format">%1$s Elevation %2$s</string>
    <string name="main_activity_solar_info_today_invisible_culmination_label">(Invisible)</string>
    <string name="main_activity_solar_info_today_sun_header">Sun</string>
    <string name="main_activity_solar_info_today_sun_ecliptic_longitude_label">Ecliptic longitude</string>
    <string name="main_activity_solar_info_today_sun_events_this_year_button">Yearly</string>
    <string name="main_activity_solar_info_today_sunrise">Sunrise</string>
    <string name="main_activity_solar_info_today_sun_culmination">Culmination</string>
    <string name="main_activity_solar_info_today_sunset">Sunset</string>
    <string name="main_activity_solar_info_today_next_event_sunrise">Next sunrise:</string>
    <string name="main_activity_solar_info_today_next_event_sunset">Next sunset:</string>
    <string name="main_activity_solar_info_today_equation_of_time_label">Equation of time</string>
    <string name="main_activity_solar_info_today_equation_of_time_format">&#x200e;%1$s&#x200e;%2$d&#x200e;\'%3$02d&#x200e;\"</string>
    <string name="main_activity_solar_info_today_moon_header">Moon</string>
    <string name="main_activity_solar_info_today_this_lunar_cycle_button">Cycle</string>
    <string name="main_activity_solar_info_today_is_noon_info">at noon</string>
    <string name="main_activity_solar_info_today_moonrise">Moonrise</string>
    <string name="main_activity_solar_info_today_moon_culmination">Culmination</string>
    <string name="main_activity_solar_info_today_moonset">Moonset</string>
    <string name="main_activity_solar_info_today_next_event_moonrise">Next moonrise:</string>
    <string name="main_activity_solar_info_today_next_event_moonset">Next moonset:</string>
    <string name="main_activity_solar_info_now_hms_24h_format">%1$02d:%2$02d:%3$02d</string>
    <string name="main_activity_solar_info_now_localtime">Local time</string>
    <string name="main_activity_solar_info_now_mean_solar_time">Mean solar time</string>
    <string name="main_activity_solar_info_now_apparent_solar_time">Apparent solar time</string>
    <string name="main_activity_solar_info_now_sidereal_time_greenwich">Greenwich sidereal time</string>
    <string name="main_activity_solar_info_now_sidereal_time_local">Local sidereal time</string>
    <string name="main_activity_solar_info_now_azimuth_label">Azimuth</string>
    <string name="main_activity_solar_info_now_azimuth_str_format">(%1$s)</string>
    <string name="main_activity_solar_info_now_elevation_label">Elevation</string>
    <string name="main_activity_solar_info_now_invisible_culmination_label">(Invisible)</string>
    <string name="main_activity_region_select_dialog_title">Select region</string>
    <string name="main_activity_dialog_this_lunar_cycle_title">Moon phase</string>
    <string name="menu_item_regions_setting">Regions setting</string>
    <string name="menu_item_app_info">App info</string>
    <string name="regions_setting_activity_title">Regions setting</string>
    <string name="format_regions_setting_default_region_label">Default: %1$s</string>
    <string name="regions_setting_change_default_region_button">Change default region</string>
    <string name="format_regions_setting_timezone_label">Timezone: %1$s (%2$s)</string>
    <string name="regions_setting_add_region_button">Add region</string>
    <string name="regions_setting_dialog_default_region_select_title">Select default region</string>
    <string name="each_region_activity_title">Configure region</string>
    <string name="each_region_activity_delete_region_button">Delete</string>
    <string name="each_region_activity_save_region_button">Save</string>
    <string name="each_region_activity_region_name_label">Region name</string>
    <string name="each_region_activity_longitude_label">Longitude</string>
    <string name="each_region_activity_longitude_hint">+:East, -:West</string>
    <string name="each_region_activity_latitude_label">Latitude</string>
    <string name="each_region_activity_latitude_hint">+:North, -:South</string>
    <string name="each_region_activity_elevation_label">Elevation</string>
    <string name="each_region_activity_elevation_hint">In calculation of sunrise/sunset, elevation is often assumed as 0m. If you like to assume elevation 0m, input 0 here.</string>
    <string name="each_region_activity_timezone_label">Timezone</string>
    <string name="each_region_activity_change_timezone_button">Change</string>
    <string name="each_region_activity_dialog_timezone_select_title">Select timezone</string>
    <string name="each_region_activity_checkbox_default_region">Set as default region</string>
    <string name="each_region_activity_error_dialog_title">Error</string>
    <string name="each_region_activity_error_dialog_message_name_empty">Name is empty</string>
    <string name="each_region_activity_error_dialog_message_coordinate_format">Coordinate value invalid</string>
    <string name="each_region_activity_error_dialog_message_longitude_range">Longitude must be between -180.0 and 180.0</string>
    <string name="each_region_activity_error_dialog_message_latitude_range">Latitude must be between -90.0 and 90.0</string>
    <string name="each_region_activity_error_dialog_message_elevation_range">Elevation must be valid non-negative value and 10000m or less</string>
    <string name="format_app_info_version">Version %1$s</string>
    <string name="app_info_source_code">Source code</string>
    <string name="app_info_author">Author</string>
    <string name="licensing_notice_header">License information</string>
    <string name="config_widget_solar_info_today_region">Region</string>
    <string name="config_widget_solar_info_today_change_button">Change</string>
    <string name="config_widget_solar_info_today_warn_no_region_yet">No region added yet. You have to add at least one before adding a widget.</string>
    <string name="config_widget_solar_info_today_ok_button">OK</string>
    <string name="widget_solar_info_today_widget_sunrise_label">Sunrise</string>
    <string name="widget_solar_info_today_widget_sunset_label">Sunset</string>
    <string name="widget_solar_info_today_widget_moon_phase_label">Moon</string>
    <string name="widget_solar_info_today_initial_text_location">-</string>
    <string name="widget_solar_info_today_preview_text_date_on_widget_without_dow">04/21</string>
    <string name="widget_solar_info_today_initial_text_date_on_widget_with_dow">---, --/--</string>
    <string name="widget_solar_info_today_initial_text_time_on_widget">--:--</string>
    <string name="widget_solar_info_today_preview_text_sunrise_time_on_widget">05:01</string>
    <string name="widget_solar_info_today_preview_text_sunset_time_on_widget">18:19</string>
    <string name="widget_solar_info_today_initial_text_moonphase_on_widget">--.-</string>
    <string name="widget_solar_info_today_preview_text_moonphase_on_widget"> 3.6</string>
</resources>