<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EachRegionSettingActivity">
    <TextView
        android:text="@string/each_region_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/each_region_setting_delete_region_button"
            android:text="@string/each_region_activity_delete_region_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            />
        <Button
            android:id="@+id/each_region_setting_save_region_button"
            android:text="@string/each_region_activity_save_region_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            />
    </LinearLayout>
    <TextView
        android:text="@string/each_region_activity_region_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/each_region_setting_region_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/each_region_activity_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/each_region_setting_longitude_edit_text"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <TextView
            android:text="@string/unit_angle_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
        android:text="@string/each_region_activity_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/each_region_setting_latitude_edit_text"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <TextView
            android:text="@string/unit_angle_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
        android:text="@string/each_region_activity_elevation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/each_region_setting_elevation_edit_text"
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <TextView
            android:text="@string/unit_angle_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
        android:text="@string/each_region_activity_timezone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/each_region_setting_timezone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/each_region_setting_change_timezone_button"
            android:text="@string/each_region_activity_change_timezone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>
