<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.widgetConfig.SolarInfoTodayTinyWidgetConfigActivity"
    >
    <TextView
        android:text="@string/config_widget_solar_info_today_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/config_widget_solar_info_today_region_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/config_widget_solar_info_today_change_region_button"
            android:text="@string/config_widget_solar_info_today_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/config_widget_solar_info_today_warn_no_region_yet"
        android:text="@string/config_widget_solar_info_today_warn_no_region_yet"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/config_widget_solar_info_today_ok_button"
        android:text="@string/config_widget_solar_info_today_ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
