<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:background="@color/widget_background_color"
    android:padding="5dp"
    android:id="@+id/widget_suninfo_root"
    >
    <TextView
        android:id="@+id/suninfo_widget_date"
        android:text="@string/widget_solar_info_today_preview_text_date_on_widget_without_dow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/widget_text_color"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/suninfo_widget_sunrise"
        android:text="@string/widget_solar_info_today_preview_text_sunrise_time_on_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/widget_text_color"
        />
    <TextView
        android:id="@+id/suninfo_widget_sunset"
        android:text="@string/widget_solar_info_today_preview_text_sunset_time_on_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/widget_text_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/suninfo_moon_phase_bitmap"
            android:src="@drawable/moonphase_on_widget_sample_50deg"
            android:layout_width="12sp"
            android:layout_height="12sp"
            android:layout_marginEnd="3sp"
            />
        <TextView
            android:id="@+id/suninfo_moon_days"
            android:text="@string/widget_solar_info_today_preview_text_moonphase_on_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/widget_text_color"
            />
    </LinearLayout>
</LinearLayout>
