<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:background="@color/widget_background_color"
    android:paddingVertical="5dp"
    android:id="@+id/widget_suninfo_root"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        >
        <TextView
            android:id="@+id/suninfo_widget_date"
            android:text="@string/widget_solar_info_today_initial_text_date_on_widget_with_dow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/widget_text_color"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/suninfo_widget_location"
            android:text="@string/widget_solar_info_today_initial_text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8sp"
            android:textColor="@color/widget_text_color"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/bluelinesolorinfoThemeColor"
        android:layout_marginVertical="4sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/widget_solar_info_today_widget_sunrise_label"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:paddingEnd="8sp"
                android:textColor="@color/widget_text_color"
                />
            <TextView
                android:text="@string/widget_solar_info_today_widget_sunset_label"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:paddingEnd="8sp"
                android:textColor="@color/widget_text_color"
                />
            <TextView
                android:text="@string/widget_solar_info_today_widget_moon_phase_label"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:paddingEnd="8sp"
                android:textColor="@color/widget_text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/suninfo_widget_sunrise"
                android:text="@string/widget_solar_info_today_initial_text_time_on_widget"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:textColor="@color/widget_text_color"
                />
            <TextView
                android:id="@+id/suninfo_widget_sunset"
                android:text="@string/widget_solar_info_today_initial_text_time_on_widget"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:textColor="@color/widget_text_color"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:id="@+id/suninfo_moon_phase_bitmap"
                    android:src="@drawable/moonphase_on_widget_sample_50deg"
                    android:layout_width="12sp"
                    android:layout_height="12sp"
                    android:layout_marginEnd="3sp"
                    />
                <TextView
                    android:id="@+id/suninfo_moon_days"
                    android:text="@string/widget_solar_info_today_initial_text_moonphase_on_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/widget_text_color"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
