<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegionsSettingActivity">
    <TextView
        android:text="@string/regions_setting_activity_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/regions_setting_default_region_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            />
        <Button
            android:id="@+id/regions_setting_change_default_region_button"
            android:text="@string/regions_setting_change_default_region_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <Button
        android:id="@+id/regions_setting_add_region_button"
        android:text="@string/regions_setting_add_region_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ListView
        android:id="@+id/regions_setting_region_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>