<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12sp"
    tools:context=".activities.MainActivity">
    <TextView
        android:text="@string/main_activity_dialog_this_lunar_cycle_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16sp"
        >
        <TableRow>
            <TextView
                android:text="@string/moon_phase_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/main_activity_dialog_this_lunar_cycle_moon_phase_0_date"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8sp"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/moon_phase_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/main_activity_dialog_this_lunar_cycle_moon_phase_90_date"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8sp"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/moon_phase_180"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/main_activity_dialog_this_lunar_cycle_moon_phase_180_date"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8sp"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/moon_phase_270"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/main_activity_dialog_this_lunar_cycle_moon_phase_270_date"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8sp"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/moon_phase_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/main_activity_dialog_this_lunar_cycle_moon_phase_360_date"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8sp"
                android:layout_gravity="center_vertical"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/main_activity_dialog_this_lunar_cycle_timezone"
        android:paddingTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>